# furicam

./: .gitignore  CMakeLists.txt  LIBHYBRIS_SHIM_HANDOFF.md  README.md  build-on-phone.sh  furicam.desktop  furicam2.desktop  package-deb.sh
cmake/: FindOpenCV.cmake
debian/: changelog  control  furicam.install  furicam.postinst  rules
extra/: furicam-radio.pkla  io.github.nico359.furicam.gschema.xml
icons/: icons.qrc
src/: accelreader.cpp  accelreader.h  android_compat.h  appcontroller.cpp  appcontroller.h  camera2preview.cpp  camera2preview.h  camera2probe.cpp  camera2probe.h  camera2session.cpp  camera2session.h  filemanager.cpp  filemanager.h  geocluefind.cpp  hdrprocessor.cpp  hdrprocessor.h  jni.h  main.cpp  meteringcontroller.cpp  meteringcontroller.h  ndk_loader.cpp  ndk_loader.h  qrcodehandler.cpp  qrcodehandler.h  rawsave.cpp  rawsave.h  thumbnailgenerator.cpp  thumbnailgenerator.h  whitebalancecontroller.cpp  whitebalancecontroller.h  windoweventfilter.cpp  zxingreader.h
src/camera2/: AudioEncoder.cpp  AudioEncoder.h  CAMERA2_PLAN.md  CMakeLists.txt  Camera2Bridge.cpp  Camera2Bridge.h  Camera2NDK.h  Camera2NDKShim.c  CameraSession.cpp  CameraSession.h  DngWriter.cpp  DngWriter.h  FLX1S_CAMERA2_CAPS.txt  FLX1S_CAMERA2_FULL_CAPS.txt  HostDlStub.c  PreviewRenderer.cpp  PreviewRenderer.h  VideoEncoder.cpp  VideoEncoder.h  camera_c.cpp  camera_c.h  furicam2_camera_c.cpp  furicam2_camera_c.h
src/camera2/shim/: CMakeLists.txt  Camera2NDKHybrisInit.c  Camera2NDKShim.c  HostDlStub.c  README.md  camera2ndk-hybris.pc.in
src/camera2/shim/host/hybris/common/: floating_point_abi.h
src/camera2/shim/include/: Camera2NDK.h  camera2ndk_hybris.h
src/camera2/shim/include/android/: hardware_buffer.h  native_window.h
src/camera2/shim/include/camera/: NdkCameraCaptureSession.h  NdkCameraDevice.h  NdkCameraError.h  NdkCameraManager.h  NdkCameraMetadata.h  NdkCameraMetadataTags.h  NdkCaptureRequest.h
src/camera2/shim/include/media/: NdkImage.h  NdkImageReader.h  NdkMediaCodec.h  NdkMediaError.h  NdkMediaFormat.h  NdkMediaMuxer.h
src/camera2/tools/: camera2_preview.cpp  camera2_probe.cpp
src/camera2/tools/gtk/: CMakeLists.txt  camera2_gtk.c
src/camera2/tools/preview/: CMakeLists.txt
src/media/: NdkMediaCodec.h
src/qml/: Camera.qml  MediaReview.qml  MetadataView.qml  QrCode.qml  colorCorrection.frag  colorCorrection.frag.qsb  colorCorrection.vert  colorCorrection.vert.qsb  main.qml  qml.qrc
